Preparacion para produccion: Dockerfile, Cloudinary y CORS